# fastApi_new

./: Dockerfile  README.md  compose.yml  pyproject.toml  taskfile.yml
api/: db.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
init-scripts/: init.sql
tests/: test_main.py
